[project]
name = "comfyui-d2-steps"
description = "A handy custom node for using Refiner (switching to a different checkpoint midway) When you specify the end of the base checkpoint, you can extract refiner_start which is end + 1. The output is fixed as an INT, so it can be passed to the handy custom node, Anything Everywhere? Since it only outputs a numerical value, it can also be used for other purposes."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/da2el-ai/ComfyUI-d2-steps"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-d2-steps"
Icon = ""
